tests/miniJava/neg/006721_mutation.MiniJava
class java { public static void while Main ( String [ ] java ) { { } } }
